# UnrealEngineBuildTool

./: .gitignore  EngineDetector.h  ProcessUtils.h  README.md  ToolchainManager.h  UnrealEngineBuildTool.sln  UnrealEngineBuildTool.vcxproj  UnrealEngineBuildTool.vcxproj.filters  main.cpp
UnrealEngineBuildTool_QT/: CMakeLists.txt  CMakeSettings.json  mainwindow.cpp  mainwindow.h  mainwindow.ui
